fix name of part pic

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </div>
       </div>
       <div class="services-card">
-        <img src="img/Parts_img.jpg" alt="Parts pic">
+        <img src="img/parts_img.jpg" alt="Parts pic">
         <div class="services-card-box">
           <h4 class="services-card-title">
             <a href="#">Parts</a>
